hopefully fix scrolling glitch on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -42,7 +31,6 @@
   margin: 0 auto;
   padding: 1rem;
   background-color: var(--background-primary);
-  min-height: 100vh;
 }
 
 .app-header {
